# flightsC-

./: CMakeLists.txt  Data.h  DataManipulator.cpp  DataManipulator.h  FileHandler.cpp  FileHandler.h  Flugdaten.csv  TimeHandler.cpp  TimeHandler.h  Validator.cpp  Validator.h  csv.qrc  customitemdelegate.cpp  customitemdelegate.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  test.csv  test.xlsx  testCol.csv  testCol.csv.xlsx  utilitymethods.cpp  utilitymethods.h
html/: _data_8h_source.html  _data_manipulator_8h_source.html  _file_handler_8h_source.html  _time_handler_8h_source.html  _validator_8h_source.html  annotated.html  class_custom_item_delegate-members.html  class_custom_item_delegate.html  class_data_manipulator-members.html  class_data_manipulator.html  class_file_handler-members.html  class_file_handler.html  class_main_window-members.html  class_main_window.html  class_time_handler-members.html  class_time_handler.html  class_utility_methods-members.html  class_utility_methods.html  class_validator-members.html  class_validator.html  classes.html  customitemdelegate_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  mainwindow_8h_source.html  structflights-members.html  structflights.html  utilitymethods_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_8.js  all_a.js  classes_0.js  classes_2.js  classes_4.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
latex/: _data_8h_source.tex  _data_manipulator_8h_source.tex  _file_handler_8h_source.tex  _time_handler_8h_source.tex  _validator_8h_source.tex  annotated.tex  class_custom_item_delegate.eps  class_custom_item_delegate.tex  class_data_manipulator.tex  class_file_handler.tex  class_main_window.tex  class_time_handler.tex  class_utility_methods.tex  class_validator.tex  customitemdelegate_8h_source.tex  files.tex  hierarchy.tex  mainwindow_8h_source.tex  refman.tex  structflights.tex  utilitymethods_8h_source.tex
